added style sheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
    <body>
-      <p>Radio check. Pilot, please confirm.
-		  Checking the first step.</p>
+      <p>Radio check. Pilot, please confirm. This is where more was added I guess.</p>
    </body>
 </html>
