branched and edited index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
-      <p>Radio check. Pilot, please confirm. This is where more was added I guess.</p>
+      <p>Radio check. Pilot, please confirm. This is where more was added I guess.
+		  This is in the branch.</p>
    </body>
 </html>
